.metadata/.plugins/org.eclipse.cdt.ui/nucleo_stm32xxdrivers.build.log
18:38:58 **** Incremental Build of configuration Debug for project nucleo_stm32xxdrivers ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:97:6: warning: implicit declaration of function 'GPIO_ReadFromInputPin' [-Wimplicit-function-declaration]
   if(GPIO_ReadFromInputPin(GPIOD, GPIO_PIN_NO_12) == BTN_PRESSED)
      ^~~~~~~~~~~~~~~~~~~~~
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F446xx -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/main.c:97:35: error: 'GPIO_PIN_NO_12' undeclared (first use in this function); did you mean 'GPIO_PIN_12'?
   if(GPIO_ReadFromInputPin(GPIOD, GPIO_PIN_NO_12) == BTN_PRESSED)
                                   ^~~~~~~~~~~~~~
                                   GPIO_PIN_12
../Core/Src/main.c:97:35: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:97:54: error: 'BTN_PRESSED' undeclared (first use in this function)
   if(GPIO_ReadFromInputPin(GPIOD, GPIO_PIN_NO_12) == BTN_PRESSED)
                                                      ^~~~~~~~~~~
../Core/Src/main.c:99:5: warning: implicit declaration of function 'delay1' [-Wimplicit-function-declaration]
     delay1();
     ^~~~~~
../Core/Src/main.c:100:5: warning: implicit declaration of function 'GPIO_ToggleOutputPin'; did you mean 'HAL_GPIO_TogglePin'? [-Wimplicit-function-declaration]
     GPIO_ToggleOutputPin(GPIOD, GPIO_PIN_NO_14);
     ^~~~~~~~~~~~~~~~~~~~
     HAL_GPIO_TogglePin
../Core/Src/main.c:100:33: error: 'GPIO_PIN_NO_14' undeclared (first use in this function); did you mean 'GPIO_PIN_NO_12'?
     GPIO_ToggleOutputPin(GPIOD, GPIO_PIN_NO_14);
                                 ^~~~~~~~~~~~~~
                                 GPIO_PIN_NO_12
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

18:39:00 Build Failed. 5 errors, 3 warnings. (took 1s.620ms)

